PDF: avoid page break inside texte header

--- a/public/css/alyoda-pdfgen.css
+++ b/public/css/alyoda-pdfgen.css
@@ -20,6 +20,11 @@ a.url-hidden:after {
 	list-style: none;
 }
 
+.noticejuridique__texte-header {
+	break-after: avoid;
+  break-inside: avoid;
+}
+
 .noticejuridique__texte {
 	margin-top: 4rem;
 }
